# minecraft-cpp

./: .clang-format  CMakeLists.txt
include/minecraft/: minecraft.h
include/minecraft/core/: camera_controller.h  input.h  window.h
include/minecraft/renderer/: i_camera.h  i_index_buffer.h  i_renderer.h  i_shader.h  i_texture2d.h  i_vertex_array.h  i_vertex_buffer.h  perspective_camera.h  renderer_api.h  renderer_factory.h  shader_factory.h  shader_paths.h
include/minecraft/renderer/opengl/: opengl_index_buffer.h  opengl_renderer.h  opengl_shader.h  opengl_texture2d.h  opengl_vertex_array.h  opengl_vertex_buffer.h
include/minecraft/util/: file_utils.h  shader_paths.h
resources/shaders/opengl/: quad.fsh  quad.vsh  triangle.vsh
src/: main.cpp  minecraft.cpp
src/core/: camera_controller.cpp  input.cpp  window.cpp
src/renderer/: i_vertex_array.cpp  perspective_camera.cpp  renderer_factory.cpp  shader_factory.cpp  shader_paths.cpp
src/renderer/opengl/: opengl_index_buffer.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_texture2d.cpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp
src/util/: file_utils.cpp  shader_paths.cpp
